Ensure the sensor is unlocked after failing to get a sample in gcm-picker

The failure may be transitory, and if the sensor is left locked then the user
has to restart the gcm-picker tool.

This is based on a patch from Klaus Kaempf, many thanks.

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=667913